--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+
+.container {
+    width: 90%;
+    margin: auto;
+}
+
+
+a {
+    text-decoration: none;
+}
