--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+ @import 'top';
 
 
 .container {
@@ -23,4 +24,5 @@
 
 a {
     text-decoration: none;
+    color: black;
 }
